<resources>
    <string name="app_name">Quiz</string>
    <string name="android_quiz">Android Quiz</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="rightlayout">RightLayout</string>
    <string name="toplayout">TopLayout</string>
    <string name="centerlayout">CenterLayout</string>
    <string name="_2_how_many_are_views">2. How many are Views?</string>
    <string name="_3_are_textview_and_imageview_viewgroups">3. Are TextView and ImageView, ViewGroups?</string>
    <string name="_4_what_view_is_used_to_create_an_editable_text_field">4. What view is used to create an editable Text field?</string>
    <string name="answers">Answers</string>
</resources>
